@@ -1691,9 +1691,6 @@ Numeric tag %s invalid.  Numeric tags should be of the form X[.X]...", name);
 	    error (1, 0, "no such tag `%s'", name);
     }
 
-    if (!the_val_args.found)
-	error (1, 0, "no such tag %s", name);
-    else
-	/* The tags is valid but not mentioned in val-tags.  Add it.  */
-	add_to_val_tags (name);
+    /* The tags is valid but not mentioned in val-tags.  Add it.  */
+    add_to_val_tags (name);
 }
