@@ -1,5 +1,10 @@
 2005-05-03  Derek Price  <derek@ximbiot.com>
 
+	* tag.c (tag_check_valid): Don't verify the_val_args.found when it is
+	not initialized.
+
+2005-05-03  Derek Price  <derek@ximbiot.com>
+
 	* add.c: Update comment to include the -k option.  This resolves issue
 	#226 on cvshome.org.
 
